--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -2,3 +2,28 @@
   margin: 0;
   padding: 0;
 }
+html {
+  font-size: 14px;
+}
+
+body {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
+#app {
+  max-width: calc(100% - 2rem);
+  max-height: calc(100% - 2rem);
+  height: 100vh;
+  background-color: #fff;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 0.5rem;
+  box-shadow:
+    rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
